samples/_failures_safe/1761168372_17e501_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e801dff.c: In function ‘main’:
./samples/SAFE/__tmp_4e801dff.c:199:9: error: expected declaration or statement at end of input
  199 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_4e801dff.c:199:9: error: expected declaration or statement at end of input
